# jtorch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TorchLib.cmake  TorchLib.srcs.cmake  TorchTest.cpp  libtest.cpp  libtest.hpp
BlasLibrary/: BlasLibrary.cmake  BlasLibrary.srcs.cmake
BlasLibrary/Source/: Blas.cpp  Blas.hpp
BlasLibrary/Source/Eigen/: BlasEigen.cpp  BlasEigen.hpp  BlasHeader.hpp
BlasLibrary/Source/Naive/: BlasNaive.cpp  BlasNaive.hpp
TorchLib/: TorchLib.cmake  TorchLib.srcs.cmake
TorchLib/Source/: FileUtils.hpp  Linear.cpp  Linear.hpp  ReLU.cpp  ReLU.hpp  Reshape.cpp  Reshape.hpp  Sequential.cpp  Sequential.hpp  SpatialConvolution.cpp  SpatialConvolution.hpp  SpatialConvolutionFactory.hpp  SpatialConvolutionGemm.cpp  SpatialConvolutionGemm.hpp  SpatialDropout.cpp  SpatialDropout.hpp  SpatialMaxPooling.cpp  SpatialMaxPooling.hpp  Tanh.cpp  Tanh.hpp  Tensor.hpp  TorchData.cpp  TorchData.hpp  TorchStage.cpp  TorchStage.hpp
TorchLib/Source/Utils/: InputStream.hpp  VectorManaged.hpp
include/jcl/math/: math_types.h
include/jtorch/: jtorch.h  linear.h  tensor.h  torch_data.h
src/jtorch/: linear.cpp
